@@ -259,6 +259,7 @@ Balancing:
   ~ Since Ether heals ~20% more HP/MP than its Potion/Elixir counterpart, it has been nerfed accordingly.
  - All party members now gain +1 INT per 5 levels, for a total of +20 INT at level 100 and +5 INT at Alpha 15's level cap of 25.
  - Revival now increases success rate instead of healing when using BP.
+ - Wand Impulse and Backstab now only heavily decrease MAT/ATK (respectively) for 2 turns instead of 3.
  - Nerfed the Rogue class's base HIT, EVA, and CRI by 1% each.
  - Nerfed the Steel Axe's stun chance by 5% (was originally 10%).
  - Nerfed Mana Refund's return to 1% of damage dealt (was originally 5%).
